# ORM

./: CMakeLists.txt  main.cpp
data/: request.txt
lib/DatabaseMOCK/: CMakeLists.txt
lib/DatabaseMOCK/include/: DatabaseMOCK.hpp
lib/DatabaseMOCK/src/: DatabaseMOCK.cpp
lib/IModelManager/: CMakeLists.txt
lib/IModelManager/include/: IModelManager.hpp
lib/ORM/: CMakeLists.txt
lib/ORM/src/: ORM.cpp
lib/ORMGenerator/: CMakeLists.txt
lib/ORMGenerator/include/: ORMGenerator.hpp
lib/tests/: CMakeLists.txt
src/: main.cpp
src/data/: request.txt
